# ansible-role-package-manager

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
defaults/: main.yml
handlers/: Alpine.yml  main.yml
meta/: main.yml
molecule/Alpine/: converge.yml  molecule.yml  side_effect.yml
molecule/Alpine/tests/: test_default.py
molecule/Debian/: converge.yml  molecule.yml  verify.yml
molecule/Debian/tests/: conftest.py  test_default.py
molecule/RedHat/: converge.yml  molecule.yml
molecule/RedHat/tests/: test_default.py
molecule/shared/: create.yml  requirements.yml
molecule/shared/tasks/: create-fail.yml
tasks/: apt_repo_item.yml  main.yml  package-manager.yml  packages-Alpine.yml  packages-Debian.yml  packages-RedHat.yml  repository-Alpine.yml  repository-Debian.yml  repository-RedHat.yml
vars/: Alpine.yml  Debian.yml  RedHat.yml
