[project]
name = "ansible-role-package-manager"
version = "0.1.0"
description = "Ansible role to manage packages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ansible>=13.1.0",
    "ansible-lint>=25.12.2",
    "docker>=7.1.0",
    "molecule-plugins[docker]>=25.8.12",
    "pytest>=9.0.2",
    "testinfra>=6.0.0",
    "yamllint>=1.37.1",
]
